fix(documentation): se añadieron exeptions al GlobalExeptionHandle