@@ -1,9 +1,11 @@
 package com.Incamar.IncaCore.exceptions;
 
 import jakarta.servlet.http.HttpServletRequest;
+import jakarta.servlet.http.HttpServletResponse;
 import org.springframework.dao.DataIntegrityViolationException;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
+import org.springframework.mail.MailAuthenticationException;
 import org.springframework.mail.MailSendException;
 import org.springframework.security.access.AccessDeniedException;
 import org.springframework.security.authentication.BadCredentialsException;
@@ -22,9 +24,9 @@ public class GlobalExceptionHandler {
   public ResponseEntity<ErrorResponse> handleGeneralException(Exception ex, HttpServletRequest request) {
     ErrorResponse errorResponse = new ErrorResponse(
             HttpStatus.INTERNAL_SERVER_ERROR.value(),
-            "INTERNAL_ERROR",
+            "INTERNAL_SERVER_ERROR",
             "Ocurrió un error interno en el servidor",
-            Collections.singletonList(ex.getMessage()),
+            Collections.singletonList("Se produjo un error inesperado. Por favor, intenta más tarde."),
             request.getRequestURI()
     );
     return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body(errorResponse);
@@ -32,7 +34,7 @@ public class GlobalExceptionHandler {
 
   @ExceptionHandler(MethodArgumentNotValidException.class)
   public ResponseEntity<ErrorResponse> handleValidationExceptions(MethodArgumentNotValidException ex, HttpServletRequest request) {
-    var details = ex.getBindingResult()
+    List<String> detalles = ex.getBindingResult()
             .getFieldErrors()
             .stream()
             .map(f -> f.getField() + ": " + f.getDefaultMessage())
@@ -42,7 +44,7 @@ public class GlobalExceptionHandler {
             HttpStatus.BAD_REQUEST.value(),
             "VALIDATION_ERROR",
             "Falló la validación de los campos",
-            details,
+            detalles,
             request.getRequestURI()
     );
     return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(errorResponse);
@@ -53,7 +55,7 @@ public class GlobalExceptionHandler {
     ErrorResponse errorResponse = new ErrorResponse(
             HttpStatus.BAD_REQUEST.value(),
             "BAD_REQUEST",
-            ex.getMessage(),
+            "Solicitud inválida",
             Collections.singletonList(ex.getMessage()),
             request.getRequestURI()
     );
@@ -61,16 +63,37 @@ public class GlobalExceptionHandler {
   }
 
   @ExceptionHandler(DataIntegrityViolationException.class)
-  public ResponseEntity<ErrorResponse> handleDataIntegrityViolationException(DataIntegrityViolationException ex, HttpServletRequest request) {
-    String message = ex.getRootCause() != null ? ex.getRootCause().getMessage() : ex.getMessage();
+  public ResponseEntity<ErrorResponse> handleDataIntegrityViolationException(
+          DataIntegrityViolationException ex, HttpServletRequest request) {
+
+    String rootMessage = ex.getRootCause() != null ? ex.getRootCause().getMessage() : ex.getMessage();
+
+    String userFriendlyMessage = "Valor duplicado detectado";
+    List<String> details = List.of(rootMessage);
+
+    if (rootMessage != null && rootMessage.contains("Detail: Ya existe la llave")) {
+      int startField = rootMessage.indexOf('(') + 1;
+      int endField = rootMessage.indexOf(')', startField);
+      int startValue = rootMessage.indexOf("=(", endField) + 2;
+      int endValue = rootMessage.indexOf(").", startValue);
+
+      if (startField > 0 && endField > startField && startValue > 1 && endValue > startValue) {
+        String field = rootMessage.substring(startField, endField);
+        String value = rootMessage.substring(startValue, endValue);
+        userFriendlyMessage = "El valor para el campo '" + field + "' ya está en uso";
+        details = List.of(field + ": " + value + " ya registrado.");
+      }
+    }
+
     ErrorResponse errorResponse = new ErrorResponse(
-            HttpStatus.CONFLICT.value(),
-            "DATA_INTEGRITY_VIOLATION",
-            "Se intento añadir un valor repetido a un campo unico",
-            Collections.singletonList(message),
+            HttpServletResponse.SC_CONFLICT,
+            "CONFLICT",
+            userFriendlyMessage,
+            details,
             request.getRequestURI()
     );
-    return ResponseEntity.status(HttpStatus.CONFLICT).body(errorResponse);
+
+    return ResponseEntity.status(HttpServletResponse.SC_CONFLICT).body(errorResponse);
   }
 
   @ExceptionHandler(BadCredentialsException.class)
@@ -79,7 +102,7 @@ public class GlobalExceptionHandler {
             HttpStatus.UNAUTHORIZED.value(),
             "BAD_CREDENTIALS",
             "Credenciales inválidas",
-            List.of(ex.getMessage()),
+            List.of("El correo o la contraseña son incorrectos."),
             request.getRequestURI()
     );
     return ResponseEntity.status(HttpStatus.UNAUTHORIZED).body(errorResponse);
@@ -88,26 +111,13 @@ public class GlobalExceptionHandler {
   @ExceptionHandler(AccessDeniedException.class)
   public ResponseEntity<ErrorResponse> handleAccessDeniedException(AccessDeniedException ex, HttpServletRequest request) {
     ErrorResponse errorResponse = new ErrorResponse(
-            HttpStatus.FORBIDDEN.value(),
-            "ACCESS_DENIED",
-            "Acceso denegado: no tienes permiso para acceder a este recurso.",
-            Collections.singletonList(ex.getMessage()),
+            HttpServletResponse.SC_FORBIDDEN,
+            "FORBIDDEN",
+            "Acceso denegado: no tienes permisos para acceder a este recurso",
+            List.of("El usuario no tiene autorización suficiente para realizar esta acción."),
             request.getRequestURI()
     );
-    return ResponseEntity.status(HttpStatus.FORBIDDEN).body(errorResponse);
-  }
-
-  @ExceptionHandler(MailSendException.class)
-  public ResponseEntity<ErrorResponse> handleMailSendException(MailSendException ex, HttpServletRequest request) {
-    String message = ex.getMostSpecificCause() != null ? ex.getMostSpecificCause().getMessage() : ex.getMessage();
-    ErrorResponse errorResponse = new ErrorResponse(
-            HttpStatus.SERVICE_UNAVAILABLE.value(),
-            "MAIL_SEND_ERROR",
-            "Error al enviar el correo electrónico: " + message,
-            Collections.singletonList(ex.getMessage()),
-            request.getRequestURI()
-    );
-    return ResponseEntity.status(HttpStatus.SERVICE_UNAVAILABLE).body(errorResponse);
+    return ResponseEntity.status(HttpServletResponse.SC_FORBIDDEN).body(errorResponse);
   }
 
   @ExceptionHandler(org.springframework.web.bind.MissingServletRequestParameterException.class)
@@ -115,8 +125,8 @@ public class GlobalExceptionHandler {
     ErrorResponse errorResponse = new ErrorResponse(
             HttpStatus.BAD_REQUEST.value(),
             "MISSING_PARAMETER",
-            "Falta un parámetro obligatorio: " + ex.getParameterName(),
-            Collections.singletonList(ex.getMessage()),
+            "Falta un parámetro obligatorio",
+            Collections.singletonList("Parámetro faltante: " + ex.getParameterName()),
             request.getRequestURI()
     );
     return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(errorResponse);
@@ -128,45 +138,137 @@ public class GlobalExceptionHandler {
             HttpStatus.BAD_REQUEST.value(),
             "MESSAGE_NOT_READABLE",
             "El cuerpo de la solicitud es inválido o está mal formado",
-            List.of(ex.getMessage()),
+            List.of("Revisa la estructura de los datos enviados en la petición."),
             request.getRequestURI()
     );
     return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(errorResponse);
   }
 
+  @ExceptionHandler({MailSendException.class, org.springframework.mail.MailAuthenticationException.class})
+  public ResponseEntity<ErrorResponse> handleMailExceptions(Exception ex, HttpServletRequest request) {
+    String message = ex.getMessage();
+    if (ex instanceof MailAuthenticationException) {
+      message = "Error de autenticación al enviar el correo: verifica usuario y contraseña del SMTP";
+    } else if (ex instanceof MailSendException && ex.getCause() != null) {
+      message = "Error al enviar el correo: " + ex.getCause().getMessage();
+    }
+
+    ErrorResponse errorResponse = new ErrorResponse(
+            HttpStatus.SERVICE_UNAVAILABLE.value(),
+            "MAIL_ERROR",
+            message,
+            List.of(ex.getMessage()),
+            request.getRequestURI()
+    );
+
+    return ResponseEntity.status(HttpStatus.SERVICE_UNAVAILABLE).body(errorResponse);
+  }
+
   @ExceptionHandler(InvalidPasswordException.class)
   public ResponseEntity<ErrorResponse> handleInvalidPasswordException(InvalidPasswordException ex, HttpServletRequest request) {
-    ErrorResponse error = new ErrorResponse(
+    ErrorResponse errorResponse = new ErrorResponse(
             HttpStatus.BAD_REQUEST.value(),
             "INVALID_PASSWORD",
-            ex.getMessage(),
+            "Contraseña inválida",
             Collections.singletonList(ex.getMessage()),
             request.getRequestURI()
     );
-    return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(error);
+    return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(errorResponse);
   }
 
   @ExceptionHandler(InvalidTokenException.class)
   public ResponseEntity<ErrorResponse> handleInvalidToken(InvalidTokenException ex, HttpServletRequest request) {
-    ErrorResponse error = new ErrorResponse(
-            HttpStatus.UNAUTHORIZED.value(),
-            "INVALID_TOKEN",
-            "Token inválido",
-            Collections.singletonList(ex.getMessage()),
+    ErrorResponse errorResponse = new ErrorResponse(
+            HttpServletResponse.SC_UNAUTHORIZED,
+            "AUTH_ERROR",
+            "Token inválido o ausente",
+            List.of("Se requiere autenticación completa para acceder a este recurso."),
             request.getRequestURI()
     );
-    return ResponseEntity.status(HttpStatus.UNAUTHORIZED).body(error);
+    return ResponseEntity.status(HttpServletResponse.SC_UNAUTHORIZED).body(errorResponse);
   }
 
   @ExceptionHandler(UserNotFoundException.class)
   public ResponseEntity<ErrorResponse> handleUserNotFound(UserNotFoundException ex, HttpServletRequest request) {
-    ErrorResponse error = new ErrorResponse(
+    ErrorResponse errorResponse = new ErrorResponse(
             HttpStatus.NOT_FOUND.value(),
             "USER_NOT_FOUND",
             "Usuario no encontrado",
             Collections.singletonList(ex.getMessage()),
             request.getRequestURI()
     );
-    return ResponseEntity.status(HttpStatus.NOT_FOUND).body(error);
+    return ResponseEntity.status(HttpStatus.NOT_FOUND).body(errorResponse);
+  }
+
+  @ExceptionHandler(BadRequestException.class)
+  public ResponseEntity<ErrorResponse> handleBadRequestException(BadRequestException ex, HttpServletRequest request) {
+    ErrorResponse errorResponse = new ErrorResponse(
+            HttpStatus.BAD_REQUEST.value(),
+            "BAD_REQUEST",
+            ex.getMessage(),
+            Collections.singletonList(ex.getMessage()),
+            request.getRequestURI()
+    );
+    return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(errorResponse);
+  }
+
+  @ExceptionHandler(ConflictException.class)
+  public ResponseEntity<ErrorResponse> handleConflictException(ConflictException ex, HttpServletRequest request) {
+    ErrorResponse errorResponse = new ErrorResponse(
+            HttpStatus.CONFLICT.value(),
+            "CONFLICT",
+            ex.getMessage(),
+            Collections.singletonList(ex.getMessage()),
+            request.getRequestURI()
+    );
+    return ResponseEntity.status(HttpStatus.CONFLICT).body(errorResponse);
+  }
+
+  @ExceptionHandler(ForbiddenException.class)
+  public ResponseEntity<ErrorResponse> handleForbiddenException(ForbiddenException ex, HttpServletRequest request) {
+    ErrorResponse errorResponse = new ErrorResponse(
+            HttpServletResponse.SC_FORBIDDEN,
+            "FORBIDDEN",
+            ex.getMessage(),
+            Collections.singletonList(ex.getMessage()),
+            request.getRequestURI()
+    );
+    return ResponseEntity.status(HttpServletResponse.SC_FORBIDDEN).body(errorResponse);
+  }
+
+  @ExceptionHandler(ResourceNotFoundException.class)
+  public ResponseEntity<ErrorResponse> handleResourceNotFoundException(ResourceNotFoundException ex, HttpServletRequest request) {
+    ErrorResponse errorResponse = new ErrorResponse(
+            HttpStatus.NOT_FOUND.value(),
+            "RESOURCE_NOT_FOUND",
+            ex.getMessage(),
+            Collections.singletonList(ex.getMessage()),
+            request.getRequestURI()
+    );
+    return ResponseEntity.status(HttpStatus.NOT_FOUND).body(errorResponse);
+  }
+
+  @ExceptionHandler(ServiceUnavailableException.class)
+  public ResponseEntity<ErrorResponse> handleServiceUnavailableException(ServiceUnavailableException ex, HttpServletRequest request) {
+    ErrorResponse errorResponse = new ErrorResponse(
+            HttpStatus.SERVICE_UNAVAILABLE.value(),
+            "SERVICE_UNAVAILABLE",
+            ex.getMessage(),
+            Collections.singletonList(ex.getMessage()),
+            request.getRequestURI()
+    );
+    return ResponseEntity.status(HttpStatus.SERVICE_UNAVAILABLE).body(errorResponse);
+  }
+
+  @ExceptionHandler(UnauthorizedException.class)
+  public ResponseEntity<ErrorResponse> handleUnauthorizedException(UnauthorizedException ex, HttpServletRequest request) {
+    ErrorResponse errorResponse = new ErrorResponse(
+            HttpServletResponse.SC_UNAUTHORIZED,
+            "AUTH_ERROR",
+            ex.getMessage(),
+            Collections.singletonList("Se requiere autenticación completa para acceder a este recurso."),
+            request.getRequestURI()
+    );
+    return ResponseEntity.status(HttpServletResponse.SC_UNAUTHORIZED).body(errorResponse);
   }
 }
